@@ -4,8 +4,8 @@ import com.isi.task.handler.BusinessErrorCodes;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
-import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class UserService {
@@ -15,7 +15,7 @@ public class UserService {
         return repository.findAll()
                 .stream()
                 .map(mapper::fromUser)
-                .collect(Collectors.toList());
+                .toList();
     }
     public ResponseUser getUserById(Integer userId) {
         return repository.findById(userId)
